classDiagram
direction TB

class BaseEntity {
  <<abstract>>
  +Guid Id
  +DateTime? ValidFrom
  +DateTime? ValidTo
  +byte[] Timestamp
}

class DetailedEntity {
  <<abstract>>
  +string Details
}

class NamedEntity {
  <<abstract>>
  +string Name
  +string Code
}

class Country {
  <<sealed>>
  +string OfficialName
  +string NativeName
  +string NumericCode
  -bool IsIsoCountry
  -bool IsLoyaltyProgram
  +string IsoCode
}

class Currency {
  <<sealed>>
  +string NumericCode
  +string MajorUnitSymbol
  +string MinorUnitSymbol
  +double RatioOfMinorUnit
  +bool IsIsoCurrency
}

class Movie {
  +string Name
  +DateTime? ValidFrom
  +string Genre
  +decimal Price
}

class Money {
  +decimal Amount
  +Guid CurrencyId
  +Currency Currency
}

BaseEntity <|-- DetailedEntity
DetailedEntity <|-- NamedEntity
NamedEntity <|-- Country
NamedEntity <|-- Currency
NamedEntity <|-- Movie
BaseEntity <|-- Money

Money --> Currency : CurrencyId
